Updating layout and first post

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -5,7 +5,7 @@
 
 <link rel='canonical' href='https://tired.energy/about/'>
 
-<link rel="stylesheet" href="/scss/style.min.450926226e724574a6b936335ea06111f8aeb253d932c86cb2cc807341cd2889.css"><meta property='og:title' content='About'>
+<link rel="stylesheet" href="/scss/style.min.ba924864c598c9494a4c1eb77d8daefff30a84b65933532320cf907a6e1b7aea.css"><meta property='og:title' content='About'>
 <meta property='og:description' content='Tired Energy - personal stories from developing a renewable future'>
 <meta property='og:url' content='https://tired.energy/about/'>
 <meta property='og:site_name' content='Tired Energy'>
@@ -13,6 +13,8 @@
 <meta name="twitter:site" content="@tired_energy">
     <meta name="twitter:creator" content="@tired_energy"><meta name="twitter:title" content="About">
 <meta name="twitter:description" content="Tired Energy - personal stories from developing a renewable future">
+    <link rel="shortcut icon" href="/img/favicon.ico" />
+
     </head>
     <body class="
     article-page
@@ -409,19 +411,7 @@
             </script><link 
                 rel="stylesheet" 
                 href="https://latest.cactus.chat/style.css"crossorigin="anonymous"
-            ><style>
-    .cactus-editor-textarea {
-        color: var(--body-text-color);
-    }
-
-    .cactus-comment-header {
-        color: var(--card-text-color-main);
-    }
-
-    .cactus-message-text > p {
-        color: var(--body-text-color);
-    }
-</style>
+            ><link rel="stylesheet" href="https://latest.cactus.chat/style.css" type="text/css">
 
 <div id="comment-section"></div>
 
