--- a/public/search/index.html
+++ b/public/search/index.html
@@ -5,14 +5,16 @@
 
 <link rel='canonical' href='https://tired.energy/search/'>
 
-<link rel="stylesheet" href="/scss/style.min.450926226e724574a6b936335ea06111f8aeb253d932c86cb2cc807341cd2889.css"><meta property='og:title' content='Search'>
+<link rel="stylesheet" href="/scss/style.min.ba924864c598c9494a4c1eb77d8daefff30a84b65933532320cf907a6e1b7aea.css"><meta property='og:title' content='Search'>
 <meta property='og:description' content=''>
 <meta property='og:url' content='https://tired.energy/search/'>
 <meta property='og:site_name' content='Tired Energy'>
 <meta property='og:type' content='article'><meta property='article:section' content='Page' />
 <meta name="twitter:site" content="@tired_energy">
     <meta name="twitter:creator" content="@tired_energy"><meta name="twitter:title" content="Search">
-<meta name="twitter:description" content=""><link rel="alternate" type="application/json" href="https://tired.energy/search/index.json"><link rel="preload" href="https://tired.energy/search/index.json" as="fetch" crossorigin="anonymous">
+<meta name="twitter:description" content=""><link rel="alternate" type="application/json" href="https://tired.energy/search/index.json">
+    <link rel="shortcut icon" href="/img/favicon.ico" />
+<link rel="preload" href="https://tired.energy/search/index.json" as="fetch" crossorigin="anonymous">
     </head>
     <body class="template-search">
     <script>
