--- a/public/ar/index.html
+++ b/public/ar/index.html
@@ -6,7 +6,7 @@
 
 <link rel='canonical' href='https://tired.energy/ar/'>
 
-<link rel="stylesheet" href="/scss/style.min.450926226e724574a6b936335ea06111f8aeb253d932c86cb2cc807341cd2889.css"><meta property='og:title' content='طاقة متعبة'>
+<link rel="stylesheet" href="/scss/style.min.ba924864c598c9494a4c1eb77d8daefff30a84b65933532320cf907a6e1b7aea.css"><meta property='og:title' content='طاقة متعبة'>
 <meta property='og:description' content='A neurodiverse, narcoleptic product manager who develops renewable energy products.'>
 <meta property='og:url' content='https://tired.energy/ar/'>
 <meta property='og:site_name' content='طاقة متعبة'>
@@ -14,6 +14,8 @@
 <meta name="twitter:site" content="@tired_energy">
     <meta name="twitter:creator" content="@tired_energy"><meta name="twitter:title" content="طاقة متعبة">
 <meta name="twitter:description" content="A neurodiverse, narcoleptic product manager who develops renewable energy products."><link rel="alternate" type="application/rss&#43;xml" href="https://tired.energy/ar/index.xml">
+    <link rel="shortcut icon" href="/img/favicon.ico" />
+
     </head>
     <body class="">
     <script>
