--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 
 <link rel='canonical' href='https://tired.energy/'>
 
-<link rel="stylesheet" href="/scss/style.min.450926226e724574a6b936335ea06111f8aeb253d932c86cb2cc807341cd2889.css"><meta property='og:title' content='Tired Energy'>
+<link rel="stylesheet" href="/scss/style.min.ba924864c598c9494a4c1eb77d8daefff30a84b65933532320cf907a6e1b7aea.css"><meta property='og:title' content='Tired Energy'>
 <meta property='og:description' content='A neurodiverse, narcoleptic product manager who develops renewable energy products.'>
 <meta property='og:url' content='https://tired.energy/'>
 <meta property='og:site_name' content='Tired Energy'>
@@ -14,6 +14,8 @@
 <meta name="twitter:site" content="@tired_energy">
     <meta name="twitter:creator" content="@tired_energy"><meta name="twitter:title" content="Tired Energy">
 <meta name="twitter:description" content="A neurodiverse, narcoleptic product manager who develops renewable energy products."><link rel="alternate" type="application/rss&#43;xml" href="https://tired.energy/index.xml">
+    <link rel="shortcut icon" href="/img/favicon.ico" />
+
     </head>
     <body class="">
     <script>
@@ -308,7 +310,9 @@
                         width="800" 
                         height="540" 
                         loading="lazy"
-                        alt="Featured image of post First Things First - I&#39;m Tired" />
+                        alt="A kitten asleep under white blankets on a white sheet on a bed"
+                        attr="Kate Stone Matheson"
+                        attrlink="https://unsplash.com/photos/uy5t-CJuIK4" />
                 
             </a>
         </div>
