--- a/public/links/index.html
+++ b/public/links/index.html
@@ -7,7 +7,7 @@ This page&amp;rsquo;s frontmatter:
 
 <link rel='canonical' href='https://tired.energy/links/'>
 
-<link rel="stylesheet" href="/scss/style.min.450926226e724574a6b936335ea06111f8aeb253d932c86cb2cc807341cd2889.css"><meta property='og:title' content='Links'>
+<link rel="stylesheet" href="/scss/style.min.ba924864c598c9494a4c1eb77d8daefff30a84b65933532320cf907a6e1b7aea.css"><meta property='og:title' content='Links'>
 <meta property='og:description' content='To use this feature, add links section to frontmatter.
 This page&amp;rsquo;s frontmatter:
 1 2 3 4 5 6 7 8 9 links: - title: GitHub description: GitHub is the world&amp;#39;s largest software development platform. website: https://github.com image: https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png - title: TypeScript description: TypeScript is a typed superset of JavaScript that compiles to plain JavaScript. website: https://www.typescriptlang.org image: ts-logo-128.jpg image field accepts both local and external images.'>
@@ -19,6 +19,8 @@ This page&amp;rsquo;s frontmatter:
 <meta name="twitter:description" content="To use this feature, add links section to frontmatter.
 This page&amp;rsquo;s frontmatter:
 1 2 3 4 5 6 7 8 9 links: - title: GitHub description: GitHub is the world&amp;#39;s largest software development platform. website: https://github.com image: https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png - title: TypeScript description: TypeScript is a typed superset of JavaScript that compiles to plain JavaScript. website: https://www.typescriptlang.org image: ts-logo-128.jpg image field accepts both local and external images.">
+    <link rel="shortcut icon" href="/img/favicon.ico" />
+
     </head>
     <body class="
     article-page
